--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0"
   },
